--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "babel-plugin-transform-default-named-imports",
-  "version": "1.2.2",
+  "name": "@jnleonard3/babel-plugin-transform-default-named-imports",
+  "version": "1.2.3",
   "description": "Allow importing of named exports from default-exporting (CJS/JSON) modules",
   "keywords": [
     "babel",
